@@ -31,38 +31,17 @@ if (adjustTimeStep)
     scalar dtForhwater = VGREAT;
     if (timeScheme == "backward")
     {
-            if (hwatermax > SMALL)
-            {
-                dtForhwater = min
-                    (
-                        dtForhwater,
-                        Foam::pow(3*truncationError*(hwatermax+VSMALL)/(dhwater3dT3max+VSMALL),1./3.)
-                    );
-            }
+        if (hwatermax > SMALL) dtForhwater = Foam::pow(3*truncationError*(hwatermax+VSMALL)/(dhwater3dT3max+VSMALL),1./3.);
         d3dt3Operator.storeDeltaT00(runTime.deltaT0Value());
     }
     else if (timeScheme == "CrankNicolson")
     {
-            if (hwatermax > SMALL)
-            {
-                dtForhwater = min
-                    (
-                        dtForhwater,
-                        Foam::pow(12*truncationError*(hwatermax+VSMALL)/(dhwater3dT3max+VSMALL),1./3.)
-                    );
-            }
+        if (hwatermax > SMALL) dtForhwater = Foam::pow(12*truncationError*(hwatermax+VSMALL)/(dhwater3dT3max+VSMALL),1./3.);
         d3dt3Operator.storeDeltaT00(runTime.deltaT0Value());
     }
     else if (timeScheme == "Euler")
     {
-            if (hwatermax > SMALL)
-            {
-                dtForhwater = min
-                    (
-                        dtForhwater,
-                        Foam::pow(2*truncationError*(hwatermax+VSMALL)/(dhwater2dT2max+VSMALL),1./2.)
-                    );
-            }
+        if (hwatermax > SMALL) dtForhwater = Foam::pow(2*truncationError*(hwatermax+VSMALL)/(dhwater2dT2max+VSMALL),1./2.);
     }
 
     scalar newDeltaT = min(dtForhwater,1.2*runTime.deltaTValue());
